smoke/basic/tasks/libcephfs: fix client debug override
Also debug mds

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/suites/smoke/basic/tasks/libcephfs_interface_tests.yaml
+++ b/suites/smoke/basic/tasks/libcephfs_interface_tests.yaml
@@ -1,8 +1,12 @@
 overrides:
   ceph:
-    client:
-      debug ms: 1
-      debug client: 20
+    conf:
+      client:
+        debug ms: 1
+        debug client: 20
+      mds:
+        debug ms: 1
+        debug mds: 20
 tasks:
 - install:
 - ceph:
