--- a/src/rgw/Makefile.am
+++ b/src/rgw/Makefile.am
@@ -52,6 +52,7 @@ librgw_la_SOURCES =  \
 	rgw/rgw_keystone.cc \
 	rgw/rgw_quota.cc \
 	rgw/rgw_dencoder.cc \
+	rgw/rgw_period_pusher.cc \
 	rgw/rgw_realm_reloader.cc \
 	rgw/rgw_realm_watcher.cc \
 	rgw/rgw_object_expirer_core.cc \
@@ -193,6 +194,7 @@ noinst_HEADERS += \
 	rgw/rgw_user.h \
 	rgw/rgw_bucket.h \
 	rgw/rgw_keystone.h \
+	rgw/rgw_period_pusher.h \
 	rgw/rgw_realm_reloader.h \
 	rgw/rgw_realm_watcher.h \
 	rgw/rgw_civetweb.h \
