--- a/suites/upgrade/firefly-hammer-x/parallel/7-final-workload/rados_mon_thrash.yaml
+++ b/suites/upgrade/firefly-hammer-x/parallel/7-final-workload/rados_mon_thrash.yaml
@@ -4,6 +4,7 @@ tasks:
           revive_delay: 20
           thrash_delay: 1
       - workunit:
+          branch: hammer
           clients:
             client.1:
             - rados/test-upgrade-v9.0.1.sh
