--- a/suites/rados/singleton-nomsgr/all/msgr.yaml
+++ b/suites/rados/singleton-nomsgr/all/msgr.yaml
@@ -6,3 +6,11 @@ tasks:
     client.0:
           - ceph_test_async_driver
           - ceph_test_msgr
+openstack:
+  machine:
+    disk: 40 # GB
+    ram: 15000 # MB
+    cpus: 1
+  volumes: # attached to each instance
+    count: 0
+    size: 1 # GB
