rgw/verify: allow rgw's to start up before starting agent
Startup is slow(er) under valgrind.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/suites/rgw/verify/tasks/rgw_s3tests_multiregion.yaml
+++ b/suites/rgw/verify/tasks/rgw_s3tests_multiregion.yaml
@@ -48,6 +48,8 @@ tasks:
         name: client1-system-user
         access key: 0te6NH5mcdcq0Tc5i8i2
         secret key: Oy4IOauQoL18Gp2zM7lC1vLmoawgqcYPbYGcWfXv
+- sleep:
+    duration: 5
 - radosgw-agent:
     client.0:
       src: client.0
