rgw: sleep before agent startup
For good measure.. it's racy.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/suites/rgw/singleton/all/radosgw-admin-multi-region.yaml
+++ b/suites/rgw/singleton/all/radosgw-admin-multi-region.yaml
@@ -53,6 +53,8 @@ tasks:
         name: client1-system-user
         access key: 1te6NH5mcdcq0Tc5i8i3
         secret key: Py4IOauQoL18Gp2zM7lC1vLmoawgqcYPbYGcWfXw
+- sleep:
+    duration: 5
 - radosgw-agent:
     client.0:
       src: client.0
