--- a/src/Makefile-env.am
+++ b/src/Makefile-env.am
@@ -172,7 +172,7 @@ LIBJSON_SPIRIT = libjson_spirit.la
 LIBLOG = liblog.la
 LIBOS = libos.la
 LIBOS_TYPES = libos_types.la
-LIBOSD = libosd.la
+LIBOSD = libosd.a
 LIBOSD_TYPES = libosd_types.la
 LIBOSDC = libosdc.la
 LIBMON = libmon.la
@@ -228,6 +228,9 @@ LIBOSD += $(LIBOSDC) $(LIBOS)
 LIBMON += $(LIBPERFGLUE)
 LIBOSD += $(LIBPERFGLUE)
 LIBMDS += $(LIBPERFGLUE)
+
+# OSD needs types
+LIBOSD += $(LIBOSD_TYPES) $(LIBOS_TYPES)
 
 # Always use system leveldb
 LIBOS += -lleveldb -lsnappy
