--- a/src/test/Makefile-server.am
+++ b/src/test/Makefile-server.am
@@ -152,7 +152,7 @@ ceph_test_keys_LDADD = $(LIBMON) $(CEPH_GLOBAL)
 bin_DEBUGPROGRAMS += ceph_test_keys
 
 get_command_descriptions_SOURCES = test/common/get_command_descriptions.cc
-get_command_descriptions_LDADD = $(LIBMON) $(LIBCOMMON) $(CEPH_GLOBAL)
+get_command_descriptions_LDADD = $(LIBMON) $(LIBMON_TYPES) $(LIBOS) $(LIBCOMMON) $(CEPH_GLOBAL)
 noinst_PROGRAMS += get_command_descriptions
 
 unittest_mon_moncap_SOURCES = test/mon/moncap.cc
