cmake: lttng integration and librbd_replay fix
Added automake's lttng dependencies into CMake,
updated files that were added and removed in
librbd_replay, added librbd_replay dependency
to ceph-dencoder

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,13 @@ option(WITH_RADOSGW "Rados Gateway is enabled" ON)
 #option for CephFS
 option(WITH_CEPHFS "CephFS is enabled" ON)
 
+#option for LTTng
+option(HAVE_LTTNG "LTTng tracing is enabled" ON)
+if(${HAVE_LTTNG})
+find_package(lttng-ust REQUIRED)
+set(WITH_LTTNG ${LTTNG_FOUND})
+endif(${HAVE_LTTNG})
+
 # Now create a useable config.h
 configure_file(
   ${PROJECT_SOURCE_DIR}/src/include/config-h.in.cmake
