cmake: Changed boost_type to {Boost_TYPE_LIBRARY}
Replace boost_type (ex:boost_thread) with
${Boost_TYPE_LIBRARY} (ex:${Boost_THREAD_LIBRARY}),
which should include "-mt" and any other prefixes/
suffixes that the FindBoost module decides to add.

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,7 +233,7 @@ else(${ENABLE_SHARED})
 endif(${ENABLE_SHARED})
 
 set(Boost_USE_MULTITHREADED ON)
-find_package(Boost COMPONENTS thread system regex random REQUIRED)
+find_package(Boost COMPONENTS thread system regex random program_options REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(Threads REQUIRED)
