--- a/src/test/Makefile-client.am
+++ b/src/test/Makefile-client.am
@@ -283,6 +283,8 @@ librados_test_stub_la_SOURCES = \
 	test/librados_test_stub/TestWatchNotify.cc
 noinst_HEADERS += \
 	test/librados_test_stub/LibradosTestStub.h \
+	test/librados_test_stub/MockTestMemIoCtxImpl.h \
+	test/librados_test_stub/MockTestMemRadosClient.h \
 	test/librados_test_stub/TestClassHandler.h \
 	test/librados_test_stub/TestRadosClient.h \
 	test/librados_test_stub/TestMemRadosClient.h \
