--- a/src/Makefile-env.am
+++ b/src/Makefile-env.am
@@ -170,8 +170,8 @@ LIBCRUSH = libcrush.la
 LIBCOMPRESSOR = libcompressor.la -lsnappy
 LIBJSON_SPIRIT = libjson_spirit.la
 LIBLOG = liblog.la
-LIBOS = libos.la
-LIBOS_TYPES = libos_types.la
+LIBOS = libos.a
+LIBOS_TYPES = libos_types.a
 LIBOSD = libosd.a
 LIBOSD_TYPES = libosd_types.la
 LIBOSDC = libosdc.la
@@ -234,6 +234,7 @@ LIBOSD += $(LIBOSD_TYPES) $(LIBOS_TYPES)
 
 # Always use system leveldb
 LIBOS += -lleveldb -lsnappy
+LIBOS += $(LIBOS_TYPES)
 
 LIBMON += $(LIBMON_TYPES)
 
