--- a/src/os/Makefile.am
+++ b/src/os/Makefile.am
@@ -1,11 +1,11 @@
-libos_types_la_SOURCES = \
+libos_types_a_SOURCES = \
 	os/Transaction.cc
-libos_types_la_CXXFLAGS = ${AM_CXXFLAGS}
-noinst_LTLIBRARIES += libos_types.la
+libos_types_a_CXXFLAGS = ${AM_CXXFLAGS}
+noinst_LIBRARIES += libos_types.a
 
 if ENABLE_SERVER
 
-libos_la_SOURCES = \
+libos_a_SOURCES = \
 	os/chain_xattr.cc \
 	os/fs/FS.cc \
 	os/DBObjectMap.cc \
@@ -26,28 +26,31 @@ libos_la_SOURCES = \
 	common/TrackedOp.cc
 
 if LINUX
-libos_la_SOURCES += os/BtrfsFileStoreBackend.cc
+libos_a_SOURCES += os/BtrfsFileStoreBackend.cc
 endif
 
 if WITH_LIBAIO
-libos_types_la_SOURCES += os/newstore/newstore_types.cc
-libos_la_SOURCES += os/newstore/NewStore.cc
+libos_types_a_SOURCES += os/newstore/newstore_types.cc
+libos_a_SOURCES += os/newstore/NewStore.cc
 endif
 
 if WITH_LIBXFS
-libos_la_SOURCES += \
+libos_a_SOURCES += \
     os/fs/XFS.cc \
     os/XfsFileStoreBackend.cc
 endif
 
 if WITH_LIBZFS
-libos_la_SOURCES += os/ZFSFileStoreBackend.cc
+libos_a_SOURCES += os/ZFSFileStoreBackend.cc
 endif
 
-libos_la_CXXFLAGS = ${AM_CXXFLAGS}
-libos_la_LIBADD = $(LIBOS_TYPES)
+libos_a_CXXFLAGS = ${AM_CXXFLAGS}
+libos_a_LIBADD = $(LIBOS_TYPES)
+if WITH_LTTNG
+libos_a_LIBADD += $(LIBOS_TP)
+endif
 
-noinst_LTLIBRARIES += libos.la
+noinst_LIBRARIES += libos.a
 
 noinst_HEADERS += \
 	os/btrfs_ioctl.h \
@@ -103,9 +106,9 @@ noinst_HEADERS += os/ZFS.h
 endif
 
 if WITH_KINETIC
-libos_la_SOURCES += os/KineticStore.cc
-libos_la_CXXFLAGS += -std=gnu++11
-libos_la_LIBADD += -lkinetic_client -lprotobuf -lglog -lgflags libcrypto.a
+libos_a_SOURCES += os/KineticStore.cc
+libos_a_CXXFLAGS += -std=gnu++11
+libos_a_LIBADD += -lkinetic_client -lprotobuf -lglog -lgflags libcrypto.a
 noinst_HEADERS += os/KineticStore.h
 endif
 
