--- a/src/Makefile-server.am
+++ b/src/Makefile-server.am
@@ -44,7 +44,8 @@ bin_SCRIPTS += \
 
 ceph_osd_SOURCES = ceph_osd.cc
 ceph_osd_LDADD = \
-	$(LIBOSDC) $(LIBOS) $(LIBOSD) $(LIBOSD_TYPES) $(LIBOS_TYPES) \
+	$(LIBOSDC) $(LIBOSD) $(LIBOSD_TYPES) $(LIBOS_TYPES) \
+	$(LIBOS) \
 	$(CEPH_GLOBAL) $(LIBCOMMON)
 if WITH_LTTNG
 ceph_osd_LDADD += $(LIBOSD_TP)
