Makefile: link TrackedOp in libglobal
1- It doesn't belong in libos.a
2- Automake doesn't like building it as both .la and .a
3- We shouldn't build it 3x anyway

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/src/mds/Makefile.am
+++ b/src/mds/Makefile.am
@@ -29,8 +29,7 @@ LIBMDS_SOURCES = \
 	mds/SessionMap.cc \
 	mds/MDSContext.cc \
 	mds/MDSAuthCaps.cc \
-	mds/MDLog.cc \
-	common/TrackedOp.cc
+	mds/MDLog.cc
 LIBMDS_DEPS = $(LIBOSDC)
 
 if ENABLE_CLIENT
