--- a/suites/fs/basic/tasks/cfuse_workunit_kernel_untar_build.yaml
+++ b/suites/fs/basic/tasks/cfuse_workunit_kernel_untar_build.yaml
@@ -4,3 +4,11 @@ tasks:
     clients:
       all:
         - kernel_untar_build.sh
+openstack:
+  machine:
+    disk: 100 # GB
+    ram: 8000 # MB
+    cpus: 1
+  volumes: # attached to each instance
+    count: 3
+    size: 30 # GB
