--- a/src/test/erasure-code/CMakeLists.txt
+++ b/src/test/erasure-code/CMakeLists.txt
@@ -49,7 +49,7 @@ target_link_libraries(unittest_erasure_code_plugin
   ec_example
   common
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_plugin PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -66,7 +66,7 @@ target_link_libraries(unittest_erasure_code
   osd
   common
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -107,7 +107,7 @@ target_link_libraries(unittest_erasure_code_plugin_jerasure
   ec_jerasure_generic
   common
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_plugin_jerasure PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -129,7 +129,7 @@ target_link_libraries(unittest_erasure_code_isa
   erasure_code
   dl
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_isa PROPERTIES COMPILE_FLAGS
 ${UNITTEST_CXX_FLAGS})
@@ -150,7 +150,7 @@ target_link_libraries(unittest_erasure_code_plugin_isa
   dl
   erasure_code
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_plugin_isa PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -171,7 +171,7 @@ target_link_libraries(unittest_erasure_code_lrc
   ec_lrc
   common
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_lrc PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -196,7 +196,7 @@ target_link_libraries(unittest_erasure_code_plugin_lrc
   ec_jerasure_generic
   common
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_plugin_lrc PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -239,7 +239,7 @@ target_link_libraries(unittest_erasure_code_plugin_shec
   common
   ec_shec_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_plugin_shec PROPERTIES COMPILE_FLAGS
   "${EC_LIBS_PATH_FLAG} ${UNITTEST_CXX_FLAGS}")
@@ -259,7 +259,7 @@ target_link_libraries(unittest_erasure_code_example
   common
   erasure_code
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_example PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -279,7 +279,7 @@ target_link_libraries(unittest_erasure_code_jerasure
   common
   ec_jerasure_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_jerasure PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -300,7 +300,7 @@ target_link_libraries(unittest_erasure_code_shec
   common
   ec_shec_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_shec PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -318,7 +318,7 @@ target_link_libraries(unittest_erasure_code_shec_all
   common
   ec_shec_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_shec_all PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -336,7 +336,7 @@ target_link_libraries(unittest_erasure_code_shec_thread
   common
   ec_shec_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_shec_thread PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
@@ -354,7 +354,7 @@ target_link_libraries(unittest_erasure_code_shec_arguments
   common
   ec_shec_generic
   ${CMAKE_DL_LIBS}
-  ${TCMALLOC_LIBS}
+  ${ALLOC_LIBS}
   ${UNITTEST_LIBS})
 set_target_properties(unittest_erasure_code_shec_arguments PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
