msg: Add slab memory for async messenger
slab memory is a prealloced fixed-size memory container, it will expand as
needed

Signed-off-by: Haomai Wang <haomai@xsky.com>

--- a/src/msg/Makefile.am
+++ b/src/msg/Makefile.am
@@ -47,6 +47,7 @@ noinst_HEADERS += \
 	msg/async/Event.h \
 	msg/async/EventEpoll.h \
 	msg/async/EventSelect.h \
+	msg/async/SlabPool.h \
 	msg/async/net_handler.h
 
 if LINUX
