fine-grained control systemd to start/stop/restart ceph services at once
Signed-off-by: Zhi Zhang <zhangz.david@outlook.com>

--- a/systemd/Makefile.am
+++ b/systemd/Makefile.am
@@ -1,5 +1,9 @@
 unitfiles = \
 	ceph.target \
+        ceph-osd.target \
+        ceph-mon.target \
+        ceph-mds.target \
+        ceph-radosgw.target \
 	ceph-mds@.service \
 	ceph-mon@.service \
 	ceph-create-keys@.service \
