openstack: tests: look in caplog
The output is now logged, use caplog instead of capsys and add it as a
test dependency.

Signed-off-by: Loic Dachary <ldachary@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,7 @@ sitepackages=True
 deps=
   -r{toxinidir}/requirements.txt
   mock
+  pytest-capturelog
 
 commands=py.test -v {posargs:teuthology/openstack/test/test_openstack.py}
 basepython=python2.7
