--- a/teuthology/openstack/test/resources_hint_no_cinder.yaml
+++ b/teuthology/openstack/test/resources_hint_no_cinder.yaml
@@ -1,13 +1,13 @@
 stop_worker: true
 machine_type: openstack
 openstack:
-  machine:
-    disk: 10 # GB
-    ram: 1024 # MB
-    cpus: 1
-  volumes:
-    count: 0
-    size: 2 # GB
+  - machine:
+     disk: 10 # GB
+     ram: 10000 # MB
+     cpus: 1
+    volumes:
+     count: 0
+     size: 2 # GB
 os_type: ubuntu
 os_version: "14.04"
 roles:
@@ -17,4 +17,4 @@ tasks:
 - exec:
     mon.a:
       - cat /proc/meminfo
-      - test $(sed -n -e 's/MemTotal.* \([0-9][0-9]*\).*/\1/p' < /proc/meminfo) -lt 4000000 && echo "RAM" "size" "ok"
+      - test $(sed -n -e 's/MemTotal.* \([0-9][0-9]*\).*/\1/p' < /proc/meminfo) -ge 10000000 && echo "RAM" "size" "ok"
