--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -117,6 +117,7 @@ BuildRequires:	libblkid-devel >= 2.17
 BuildRequires:	libudev-devel
 BuildRequires:	libtool
 BuildRequires:	make
+BuildRequires:  openssl-devel
 BuildRequires:	parted
 BuildRequires:	perl
 BuildRequires:	pkgconfig
